# stonks-lake

./: .gitignore  README.md  cdk.json  pyproject.toml
src/: app.py
src/lambda/snowflake_external_function/: index.py
src/lambda/stonks_raw_function/: index.py
src/stacks/: external_function.yaml  stonks_api_stack.py  stonks_lake_stack.py
src/stonks_lake/: stonks_lake_stack.py
